CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT(mispatial)

SET(PROJECT_NAME "mispatial")
SET(PACKAGE_VERSION_MAJOR "1")
SET(PACKAGE_VERSION_MINOR "0")
SET(PACKAGE_VERSION_PATCH "20160129")

INCLUDE_DIRECTORIES(include)

if(APPLE)
	SET(CMAKE_MACOSX_RPATH 1)
	ADD_DEFINITIONS(-g -O3 -Wall)
elseif(WIN32) 
	SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
	SET(CMAKE_BUILD_TYPE Release)
	SET(CMAKE_INSTALL_PREFIX, "C:/Program Files/mi")
endif(APPLE)

ADD_SUBDIRECTORY(include/mi)
ADD_SUBDIRECTORY(samples)

